@@ -1,6 +1,6 @@
 {
     "name": "Devel-Platform-Info",
-    "version": "0.09",
+    "version": "0.10",
     "abstract": "Unified framework for obtaining common platform metadata.",
     "author": [
         "Barbie (BARBIE) <barbie@cpan.org>",
@@ -38,6 +38,11 @@
     },
 
     "prereqs" : {
+        "runtime" : {
+            "requires" : {
+                "perl": "5.006"
+            }
+        },
         "test" : {
             "requires": {
                 "IO::File": "0",
@@ -47,8 +52,8 @@
             "recommends": {
                 "Test::Pod": "1.00",
                 "Test::Pod::Coverage": "0.08",
-                "Test::CPAN::Meta": "0.13",
-                "Test::JSON::Meta": "0.08"
+                "Test::CPAN::Meta": "0",
+                "Test::CPAN::Meta::JSON": "0"
             }
         }
     },
@@ -56,35 +61,35 @@
     "provides": {
         "Devel::Platform::Info": {
             "file": "lib/Devel/Platform/Info.pm",
-            "version": "0.09"
+            "version": "0.10"
         },
         "Devel::Platform::Info::BSD": {
             "file": "lib/Devel/Platform/Info/BSD.pm",
-            "version": "0.09"
+            "version": "0.10"
         },
         "Devel::Platform::Info::Irix": {
             "file": "lib/Devel/Platform/Info/Irix.pm",
-            "version": "0.09"
+            "version": "0.10"
         },
         "Devel::Platform::Info::Linux": {
             "file": "lib/Devel/Platform/Info/Linux.pm",
-            "version": "0.09"
+            "version": "0.10"
         },
         "Devel::Platform::Info::Mac": {
             "file": "lib/Devel/Platform/Info/Mac.pm",
-            "version": "0.09"
+            "version": "0.10"
         },
         "Devel::Platform::Info::SCO": {
             "file": "lib/Devel/Platform/Info/SCO.pm",
-            "version": "0.09"
+            "version": "0.10"
         },
         "Devel::Platform::Info::Solaris": {
             "file": "lib/Devel/Platform/Info/Solaris.pm",
-            "version": "0.09"
+            "version": "0.10"
         },
         "Devel::Platform::Info::Win32": {
             "file": "lib/Devel/Platform/Info/Win32.pm",
-            "version": "0.09"
+            "version": "0.10"
         }
     },
     "no_index": {
