@@ -4,8 +4,8 @@ use Test::More;
 plan skip_all => "Author tests not required for installation"
     unless ( $ENV{AUTOMATED_TESTING} );
 
-eval "use Test::JSON::Meta 0.08";
-plan skip_all => "Test::JSON::Meta 0.08 required for testing META.json files" if $@;
+eval "use Test::CPAN::Meta::JSON";
+plan skip_all => "Test::CPAN::Meta::JSON required for testing META.json files" if $@;
 
 plan no_plan;
 
